Auto stash before merge of "lot1" and "origin/lot1"
Nombre de templates max = 102 simultanément et plus 102 fois possible d'en créer

--- a/src/app/components/main-view/main-view.component.html
+++ b/src/app/components/main-view/main-view.component.html
@@ -37,7 +37,7 @@
       </span>
     </div>
     <div class='charts' id='1'>
-      <template #chartHost></template>
+      <template id='101' #chartHost></template>
     </div>
 
   </div>
