--- a/src/app/view/components/view/view.component.html
+++ b/src/app/view/components/view/view.component.html
@@ -1,5 +1,5 @@
 <div id="chartContainerSimple">
-  <div class='charts' id='1'>
+  <div class='chartContained' id='1'>
     <template #chartHost></template>
   </div>
 </div>
