--- a/src/app/view/components/view/view.component.html
+++ b/src/app/view/components/view/view.component.html
@@ -1,3 +1,9 @@
+<header>
+  <figure>
+    <img src="assets/images/football.png" alt="Logo" />
+    <figcaption>DW</figcaption>
+  </figure>
+</header>
 <div id="chartContainerSimple">
   <div class='chartContained' id='1'>
     <template #chartHost></template>
