--- a/src/app/view/components/view/view.component.html
+++ b/src/app/view/components/view/view.component.html
@@ -12,3 +12,4 @@
 <div id="templates" class="ecrans">
   <template *ngFor="let el of templatesTab; let i = index" id='{{ i+102 }}' #chartHost></template>
 </div>
+<a [routerLink]="['/home']">Back to creation zone</a>
