--- a/src/app/components/main-view/main-view.component.scss
+++ b/src/app/components/main-view/main-view.component.scss
@@ -72,3 +72,10 @@
   .draggable:active{
     cursor:grabbing;
   }
+
+  .saveButton {
+    position: absolute;
+    bottom: 5%;
+    right: 5vw;
+  }
+  
